--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=subasta.autos
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/subasta-autos
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres?user=postgres.zsiqorbnmedvvdjjskom&password=9kWUgp5GY*zNfb3
+spring.datasource.username=postgres.zsiqorbnmedvvdjjskom
+spring.datasource.password=9kWUgp5GY*zNfb3
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 server.port = 8085
 
