--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,24 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- COPY NEW DEPENDENCIES FROM SERVER -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
